# llm-sandbox-on-steroids

./: README.md  pyproject.toml
anthropic/prompting_tutorial/: README.md  advanced.md  beginner.md  common.py  exercise_10_2_1_sql.py  exercise_1_1_counting_to_three.py  exercise_1_2_system_prompt.py  exercise_2_1_spanish.py  exercise_2_2_one_player_only.py  exercise_2_3_write_a_story.py  exercise_3_1_math_correction.py  exercise_4_1_haiku_topic.py  exercise_4_2_dog_question_with_typos.py  exercise_4_3_dog_question_part_2.py  exercise_5_1_steph_curry_goat.py  exercise_5_2_two_haikus.py  exercise_5_3_two_haikus_two_animals.py  exercise_6_1_classifying_emails.py  exercise_6_2_email_classification_formatting.py  exercise_7_1_email_formatting_via_examples.py  exercise_8_1_beyonce_hallucination.py  exercise_8_2_prospectus_hallucination.py  exercise_9_1_financial_services_chatbot.py  exercise_9_2_codebot.py  intermediate.md
anthropic/prompting_tutorial/assets/: exercise_8_2_document.txt  exercise_9_1_document.txt
kaggle/titanic-machine-learning/: README.md  titanic_notebook.ipynb
kaggle/titanic-machine-learning/output/: submission_mlp.csv
karpathy/autograd/: lecture_01.md  micrograd_lecture_01.ipynb  micrograd_lecture_01_torch.ipynb
prompts/: README.md  bre.md  bre.py  experts.md  experts.py  grammar.md  grammar.py  simple.md  summarizer.md  summarizer.py
